# AI-Code_Sec

./: .gitignore  AI_Audit_Optimization_Plan.md  AI_Security_Audit_Report.md  Audit_Versions_Comparison.md  BACKUP_SUMMARY.md  CHANGELOG.md  Configuration-Update-Summary.md  Development-Guide.md  GITHUB_SYNC_SUMMARY.md  Manual_Security_Audit_Report.md  Manual_vs_AI_Audit_Comparison.md  OPTIMIZATION_PLAN.md  Optimization_Results_Analysis.md  PRE_LAUNCH_CHECKLIST.md  PROJECT_CLEANUP_SUMMARY.md  PROJECT_REORGANIZATION_PLAN.md  PROJECT_REORGANIZATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_Development.md  RELEASE_NOTES_v2.3.0.md  SIMPLIFIED_CONFIGURATION_SUMMARY.md  Ultra_Optimization_Results.md  audit_any_project.py  audit_log.txt  audit_report.md  audit_results.json  audit_results_report.md  check_database_status.py  cleanup_test.json  cleanup_test2.json  cleanup_test2_report.md  cleanup_test3.json  cleanup_test3_report.md  cleanup_test4.json  cleanup_test4_report.md  cleanup_test_report.md  complete_test.py  comprehensive_audit_report.md  comprehensive_audit_report_v2.md  (+93 more)
.cursor/rules/: 1.mdc  rule.mdc
ai_code_audit/: __init__.py  __main__.py
docs/: PROJECT_CLEANUP_SUMMARY.md  usage_guide.md  优化计划.md  使用指南.md  前端安全检测.md  参数表格.md  命令文件对应表.md  文件分析策略.md  文件类型矩阵.md  文件过滤说明.md  文档索引.md  时间统计功能总结.md  时间统计数据.md  智能过滤指南.md  模型配置变更.md  清理建议.md  缓存策略说明.md  项目结构说明.md
examples/: qdbcrm_full_audit.py
scripts/: __init__.py  init_database.py
svg/: README.md
test_cross_file/: main.py
test_project/: extreme_vulns.py
test_queue/: test_priority_queue.sh  test_queue_system.sh
tests/: __init__.py  test_api_improvements.py  test_cross_file_analysis.py  test_current_optimizations.py  test_frontend_optimization.py  test_improved_audit.py  test_key_files.py  test_specific_upload_file.py
tools/: performance_analyzer.py
web-system/: .env.secure  DEPLOYMENT.md  PROJECT_STRUCTURE.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v3.0.0.md  database_export_permissions.sql  database_setup.sql  database_user_specific_permissions.sql  debug_ai_integration.py  debug_llm_call.py  deploy.sh  docker-compose.yml  docker-env-template  release.sh  start_system.sh  test_system.py
(+168 files in other folders)
